--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1332,10 +1332,10 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
             </objects>
             <point key="canvasLocation" x="6318" y="2280"/>
         </scene>
-        <!--Products List Controllers-->
+        <!--Products Per Category Controller-->
         <scene sceneID="S9e-WT-S4k">
             <objects>
-                <viewController id="bP3-WA-TIi" customClass="ProductsListControllers" customModule="pak_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bP3-WA-TIi" customClass="ProductsPerCategoryController" customModule="pak_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="z2J-Ac-tEZ"/>
                         <viewControllerLayoutGuide type="bottom" id="KLz-4b-yxF"/>
@@ -1349,63 +1349,67 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="31X-b3-wCp">
-                                    <size key="itemSize" width="79" height="50"/>
+                                    <size key="itemSize" width="103" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_category_name" id="QFp-p8-rlC" customClass="CVCNameCategory" customModule="pak_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2" width="79" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_category_name" id="QFp-p8-rlC" customClass="CVCCategoryName" customModule="pak_ios" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="2" width="103" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="79" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="103" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLS-AG-EBF" userLabel="l_name">
-                                                    <rect key="frame" x="17" y="15" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nLS-AG-EBF" userLabel="l_name">
+                                                    <rect key="frame" x="25" y="17.5" width="53.5" height="15.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
                                         <constraints>
+                                            <constraint firstItem="nLS-AG-EBF" firstAttribute="centerX" secondItem="QFp-p8-rlC" secondAttribute="centerX" id="Bzp-5t-uIE"/>
                                             <constraint firstItem="nLS-AG-EBF" firstAttribute="centerY" secondItem="QFp-p8-rlC" secondAttribute="centerY" id="HLE-hZ-iB8"/>
-                                            <constraint firstItem="nLS-AG-EBF" firstAttribute="leading" secondItem="QFp-p8-rlC" secondAttribute="leading" constant="17" id="w1R-O5-QAq"/>
                                         </constraints>
                                         <connections>
-                                            <outlet property="l_name" destination="nLS-AG-EBF" id="fGB-Pv-3o8"/>
+                                            <outlet property="l_name" destination="nLS-AG-EBF" id="4cd-Uq-xao"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q9Z-NG-WDU">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q9Z-NG-WDU" userLabel="tv_subcategories">
                                 <rect key="frame" x="0.0" y="134" width="375" height="533"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_list_products" rowHeight="176" id="N2Z-tM-dh9" customClass="TVCListProducts" customModule="pak_ios" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_list_products" rowHeight="176" id="N2Z-tM-dh9" userLabel="tvc_sub_categories" customClass="TVCListProducts" customModule="pak_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="176"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N2Z-tM-dh9" id="KEp-5A-Czz">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="175.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7qD-DZ-Wqj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="22"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7qD-DZ-Wqj" userLabel="iv_category_background">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                                                    <color key="backgroundColor" red="0.54117647059999996" green="0.83529411760000005" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="DaR-9d-gQ0"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjc-na-6mg">
-                                                    <rect key="frame" x="15" y="4" width="29" height="14"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjc-na-6mg" userLabel="l_category_name">
+                                                    <rect key="frame" x="15" y="0.0" width="360" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="PNX-KA-oIo"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-S4-FrA">
-                                                    <rect key="frame" x="0.0" y="23" width="375" height="153"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-S4-FrA" userLabel="cv_products">
+                                                    <rect key="frame" x="0.0" y="40" width="375" height="136"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jlb-aq-dlM">
                                                         <size key="itemSize" width="125" height="153"/>
@@ -1414,26 +1418,38 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_product" id="bd8-vz-gWY" customClass="CVCProducts" customModule="pak_ios" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="153"/>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_product" id="bd8-vz-gWY" customClass="CVCProduct" customModule="pak_ios" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="-8.5" width="125" height="153"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="125" height="153"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kFS-hk-RKm">
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kFS-hk-RKm" userLabel="iv_product">
                                                                         <rect key="frame" x="0.0" y="6" width="125" height="79"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     </imageView>
                                                                 </subviews>
                                                             </view>
                                                             <connections>
-                                                                <outlet property="i_product" destination="kFS-hk-RKm" id="kuv-Xi-GTj"/>
+                                                                <outlet property="iv_product" destination="kFS-hk-RKm" id="3kQ-qZ-RdR"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="7qD-DZ-Wqj" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="4uG-Ag-M23"/>
+                                                <constraint firstAttribute="trailing" secondItem="Llp-S4-FrA" secondAttribute="trailing" id="FZa-Se-4kA"/>
+                                                <constraint firstItem="Llp-S4-FrA" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="KAB-CT-TvY"/>
+                                                <constraint firstAttribute="bottom" secondItem="Llp-S4-FrA" secondAttribute="bottom" id="PnC-hG-Pjd"/>
+                                                <constraint firstItem="kjc-na-6mg" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" constant="15" id="VJJ-iJ-nlJ"/>
+                                                <constraint firstItem="7qD-DZ-Wqj" firstAttribute="top" secondItem="KEp-5A-Czz" secondAttribute="top" id="mHf-mp-xTT"/>
+                                                <constraint firstItem="Llp-S4-FrA" firstAttribute="top" secondItem="7qD-DZ-Wqj" secondAttribute="bottom" id="mkD-G2-5BA"/>
+                                                <constraint firstAttribute="trailing" secondItem="7qD-DZ-Wqj" secondAttribute="trailing" id="nlp-Gx-tPL"/>
+                                                <constraint firstAttribute="trailing" secondItem="kjc-na-6mg" secondAttribute="trailing" id="soh-vp-LrV"/>
+                                                <constraint firstItem="kjc-na-6mg" firstAttribute="top" secondItem="KEp-5A-Czz" secondAttribute="top" id="sx5-mx-mMj"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cv_list_products" destination="Llp-S4-FrA" id="s2c-jX-A3G"/>
@@ -1452,7 +1468,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YhM-9c-kHF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8948" y="1334"/>
+            <point key="canvasLocation" x="8948" y="1333.5832083958021"/>
         </scene>
         <!--Search View-->
         <scene sceneID="yLe-T6-Q1P">
