--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1385,7 +1385,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_list_products" rowHeight="176" id="N2Z-tM-dh9" userLabel="tvc_sub_categories" customClass="TVCListProducts" customModule="pak_ios" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_list_products" rowHeight="176" id="N2Z-tM-dh9" userLabel="tvc_sub_categories" customClass="TVCSubcategory" customModule="pak_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="176"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N2Z-tM-dh9" id="KEp-5A-Czz">
@@ -1452,7 +1452,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="cv_list_products" destination="Llp-S4-FrA" id="s2c-jX-A3G"/>
+                                            <outlet property="cv_products" destination="Llp-S4-FrA" id="Qt5-QO-J2i"/>
                                             <outlet property="l_name_brand" destination="kjc-na-6mg" id="xgt-tZ-hHK"/>
                                         </connections>
                                     </tableViewCell>
@@ -1463,7 +1463,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                     </view>
                     <connections>
                         <outlet property="cv_name_category" destination="jgW-UP-kcC" id="MbR-jh-gyl"/>
-                        <outlet property="tv_list_Brand" destination="Q9Z-NG-WDU" id="M4Z-6u-DD1"/>
+                        <outlet property="tv_sub_categories" destination="Q9Z-NG-WDU" id="zRA-yA-JFb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YhM-9c-kHF" userLabel="First Responder" sceneMemberID="firstResponder"/>
