--- a/pak-ios/storyboards/Base.lproj/Main.storyboard
+++ b/pak-ios/storyboards/Base.lproj/Main.storyboard
@@ -1344,10 +1344,12 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jgW-UP-kcC">
-                                <rect key="frame" x="0.0" y="72" width="375" height="54"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jgW-UP-kcC" userLabel="cv_name_category">
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="wFv-va-Kg6"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="31X-b3-wCp">
                                     <size key="itemSize" width="103" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -1356,7 +1358,7 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_category_name" id="QFp-p8-rlC" customClass="CVCCategoryName" customModule="pak_ios" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="2" width="103" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="103" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="103" height="50"/>
@@ -1380,9 +1382,8 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q9Z-NG-WDU" userLabel="tv_subcategories">
-                                <rect key="frame" x="0.0" y="134" width="375" height="533"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q9Z-NG-WDU" userLabel="tv_subcategories">
+                                <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tvc_list_products" rowHeight="176" id="N2Z-tM-dh9" userLabel="tvc_sub_categories" customClass="TVCSubcategory" customModule="pak_ios" customModuleProvider="target">
@@ -1408,29 +1409,39 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-S4-FrA" userLabel="cv_products">
-                                                    <rect key="frame" x="0.0" y="40" width="375" height="136"/>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-S4-FrA" userLabel="cv_products">
+                                                    <rect key="frame" x="0.0" y="40" width="375" height="130"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jlb-aq-dlM">
-                                                        <size key="itemSize" width="125" height="153"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="130" id="20g-xb-Wip"/>
+                                                    </constraints>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QMW-wJ-esX">
+                                                        <size key="itemSize" width="125" height="130"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cvc_product" id="bd8-vz-gWY" customClass="CVCProduct" customModule="pak_ios" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="-8.5" width="125" height="153"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="130"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                                <rect key="frame" x="0.0" y="0.0" width="125" height="153"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="125" height="130"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kFS-hk-RKm" userLabel="iv_product">
-                                                                        <rect key="frame" x="0.0" y="6" width="125" height="79"/>
-                                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kFS-hk-RKm" userLabel="iv_product">
+                                                                        <rect key="frame" x="0.0" y="6" width="125" height="80"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="80" id="djY-he-ecw"/>
+                                                                        </constraints>
                                                                     </imageView>
                                                                 </subviews>
                                                             </view>
+                                                            <constraints>
+                                                                <constraint firstItem="kFS-hk-RKm" firstAttribute="top" secondItem="bd8-vz-gWY" secondAttribute="top" constant="6" id="1TJ-qc-w2a"/>
+                                                                <constraint firstItem="kFS-hk-RKm" firstAttribute="leading" secondItem="bd8-vz-gWY" secondAttribute="leading" id="e3o-7c-VbW"/>
+                                                                <constraint firstAttribute="trailing" secondItem="kFS-hk-RKm" secondAttribute="trailing" id="qkI-yQ-eN6"/>
+                                                            </constraints>
                                                             <connections>
                                                                 <outlet property="iv_product" destination="kFS-hk-RKm" id="3kQ-qZ-RdR"/>
                                                             </connections>
@@ -1442,7 +1453,6 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                                                 <constraint firstItem="7qD-DZ-Wqj" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="4uG-Ag-M23"/>
                                                 <constraint firstAttribute="trailing" secondItem="Llp-S4-FrA" secondAttribute="trailing" id="FZa-Se-4kA"/>
                                                 <constraint firstItem="Llp-S4-FrA" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" id="KAB-CT-TvY"/>
-                                                <constraint firstAttribute="bottom" secondItem="Llp-S4-FrA" secondAttribute="bottom" id="PnC-hG-Pjd"/>
                                                 <constraint firstItem="kjc-na-6mg" firstAttribute="leading" secondItem="KEp-5A-Czz" secondAttribute="leading" constant="15" id="VJJ-iJ-nlJ"/>
                                                 <constraint firstItem="7qD-DZ-Wqj" firstAttribute="top" secondItem="KEp-5A-Czz" secondAttribute="top" id="mHf-mp-xTT"/>
                                                 <constraint firstItem="Llp-S4-FrA" firstAttribute="top" secondItem="7qD-DZ-Wqj" secondAttribute="bottom" id="mkD-G2-5BA"/>
@@ -1460,6 +1470,15 @@ c3ZfaW5wdXRfcmVnaXN0ZXIQA
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Q9Z-NG-WDU" firstAttribute="top" secondItem="jgW-UP-kcC" secondAttribute="bottom" constant="10" id="1OX-Wn-OrO"/>
+                            <constraint firstItem="KLz-4b-yxF" firstAttribute="top" secondItem="Q9Z-NG-WDU" secondAttribute="bottom" id="4pt-JP-HBH"/>
+                            <constraint firstItem="Q9Z-NG-WDU" firstAttribute="leading" secondItem="g0c-FX-W7d" secondAttribute="leading" id="9sb-oQ-diJ"/>
+                            <constraint firstItem="jgW-UP-kcC" firstAttribute="leading" secondItem="g0c-FX-W7d" secondAttribute="leading" id="Bz6-Ji-2p3"/>
+                            <constraint firstItem="jgW-UP-kcC" firstAttribute="top" secondItem="z2J-Ac-tEZ" secondAttribute="bottom" id="PKM-nu-4oB"/>
+                            <constraint firstAttribute="trailing" secondItem="jgW-UP-kcC" secondAttribute="trailing" id="gtu-eA-2hf"/>
+                            <constraint firstAttribute="trailing" secondItem="Q9Z-NG-WDU" secondAttribute="trailing" id="n4L-Mt-sqs"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="cv_name_category" destination="jgW-UP-kcC" id="MbR-jh-gyl"/>
